--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,14 +41,16 @@
 
     <EditText
         android:id="@+id/TextIdNumber"
-        android:layout_width="360dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
+        android:enabled="false"
         android:hint="ID:"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/TextTexName"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -96,4 +98,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnExcluir" />
 
+    <ListView
+        android:id="@+id/listViewClientes2"
+        android:layout_width="360dp"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLista" />
 </androidx.constraintlayout.widget.ConstraintLayout>
