--- a/app/src/main/res/layout/activity_lista_cliente.xml
+++ b/app/src/main/res/layout/activity_lista_cliente.xml
@@ -5,4 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListaCliente">
+
+    <ListView
+        android:id="@+id/listViewClientes2"
+        android:layout_width="350dp"
+        android:layout_height="600dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.492" />
 </androidx.constraintlayout.widget.ConstraintLayout>
