--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,16 +80,17 @@
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
-        android:text="Limpar"
+        android:text="Contatos"
         android:backgroundTint="@android:color/holo_blue_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnExcluir" />
 
     <ListView
-        android:id="@+id/listViewClientes2"
+        android:id="@+id/listViewClientes1"
         android:layout_width="360dp"
         android:layout_height="150dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLista" />
